--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name = ".ui.login.ParseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,8 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SimpleInsta">
         <activity android:name=".ui.login.LoginActivity"/>
+        <activity android:name=".ui.login.MainActivity"/>
         <activity
-            android:name=".ui.login.MainActivity"
+            android:name=".ui.login.SplashActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
