--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         </provider>
         <activity android:name=".ui.login.LoginActivity"/>
         <activity android:name=".ui.login.MainActivity"/>
+        <activity android:name=".ui.login.DetailsActivity"/>
         <activity
             android:name=".ui.login.SplashActivity"
             android:label="@string/app_name">
