--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.codepath.simpleinsta">
+    package="com.codepath.Weightroom">
     <queries>
         <!-- Camera -->
         <intent>
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name = ".ui.login.ParseApplication"
+        android:name = "com.codepath.Weightroom.ui.login.ParseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,11 +28,11 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/fileprovider" />
         </provider>
-        <activity android:name=".ui.login.LoginActivity"/>
-        <activity android:name=".ui.login.MainActivity"/>
-        <activity android:name=".ui.login.DetailsActivity"/>
+        <activity android:name="com.codepath.Weightroom.ui.login.LoginActivity"/>
+        <activity android:name="com.codepath.Weightroom.ui.login.MainActivity"/>
+        <activity android:name="com.codepath.Weightroom.ui.login.DetailsActivity"/>
         <activity
-            android:name=".ui.login.SplashActivity"
+            android:name="com.codepath.Weightroom.ui.login.SplashActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
