--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.codepath.simpleinsta"
+        applicationId "com.codepath.Weightroom"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -32,9 +32,10 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+
+    implementation 'com.codepath.libraries:asynchttpclient:2.1.1'
+
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
@@ -43,7 +44,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.18.5"
+    implementation "com.github.parse-community.Parse-SDK-Android:parse:1.24.1"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
