--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,8 @@ dependencies {
 
     implementation 'commons-io:commons-io:2.6'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+
 
 }
